fix horizontal scroll default css

--- a/horizontal-scroll/horizontal-scroll.component.scss
+++ b/horizontal-scroll/horizontal-scroll.component.scss
@@ -54,3 +54,7 @@
   }
 
 }
+
+::ng-deep .scrollable-element > * {
+  display: inline-block;
+}
